--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>It's my birthday</h1>
     <h2>on the 15th ferbaury</h2>
-    <img src="cake.gif" alt="this is a cake to wish a birthday">
+    <img src="tortas-de-cumpleaños.gif" alt="this is a cake to wish a birthday">
     <h3>what to bring:</h3>
     <ul>
         <li>Ballons (I love baloons)</li>
